<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dateLabel"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sortString"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="108dp" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/tbSort"
        android:textOn="@string/sortTextOn"
        android:textOff="@string/sortTextOff"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/newsDeskText"
        android:id="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tbSort"
        android:layout_alignParentLeft="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arts"
        android:id="@+id/cbArts"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:checked="false"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fashion"
        android:id="@+id/cbFashion"
        android:layout_below="@+id/cbArts"
        android:layout_alignParentLeft="true"
        android:checked="false"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sports"
        android:id="@+id/cbSports"
        android:layout_below="@+id/cbFashion"
        android:layout_alignParentLeft="true"
        android:checked="false"
        android:onClick="onCheckboxClicked"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:layout_below="@+id/cbSports"
        android:layout_alignParentLeft="true"
        android:onClick="onSave"/>

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dpDate"
        android:layout_alignTop="@+id/dpDate"
        android:layout_toEndOf="@+id/textView" />
</RelativeLayout>
